--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "firebase": "^8.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-pdf": "^5.3.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-to-pdf": "0.0.14",
     "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
